added swagger, invoice number and change in service restriction

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # DB_URI = mongodb://localhost/excavator;
-DB_URI = mongodb+srv://tejram:wizbeeuser@cluster0-qeebj.azure.mongodb.net/excavator?retryWrites=true;
+# DB_URI = mongodb+srv://tejram:wizbeeuser@cluster0-qeebj.azure.mongodb.net/excavator?retryWrites=true; (Expired)
+DB_URI = mongodb+srv://schafle8:e2J6e11CEUFWzr0T@cluster0.5gjyg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_ACCESS_KEY = WizBee;
 MAIL_ID = ng.personal.manager@gmail.com
 MAIL_PS = Working@24hr
