--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
             "morgan": "1.9.1",
             "node-cron": "^2.0.3",
             "nodemailer": "^6.4.11",
-            "serve-favicon": "2.5.0"
+            "serve-favicon": "2.5.0",
+            "swagger-jsdoc": "^6.2.8",
+            "swagger-node-express": "2.1.3"
       },
       "devDependencies": {
             "nodemon": "^2.0.4"
